# Perk

./: .gitignore  CONTRIBUTING.md  MANIFESTODO.md  Makefile  README.md  a.out  dune-project  flake.nix  libs_expanded.h  package-lock.json  tags
.github/workflows/: main.yml  run_tests.yml  update_docs.yml
lib/: ast.ml  c_errors.ml  c_lexer.ml  c_parser.mly  codegen.ml  compile_utils.ml  ctype_ast.ml  dune  error_codes.ml  errors.ml  extract_keywords.ml  file_info.ml  free_variables.ml  keyword_tracker.ml  lexer.ml  location.ml  parse_lexing_commons.ml  parse_tags.ml  parser.mly  polymorphism.ml  type_symbol_table.ml  typecheck.ml  utils.ml  var_symbol_table.ml
perkelang-extension/: perkelang-syntax-0.0.1.vsix  perkelang.tmLanguage.json
perkelang-extension/syntaxes/: perkelang.tmLanguage.json
perkelang-vscode-lsp/: perkelang-vscode-lsp-1.0.0.vsix
test/: dune  metaperk.c  metaperk.perk  spigonzo  spigonzo.c  spigonzo.perk  test.perk
test/fail/: 01-empty.expected  02-if_wrong_type_guard.expected  02-if_wrong_type_guard.perk  03-missing_import.perk  04-missing_return_type.expected  04-missing_return_type.perk  05-wrong_return_type.expected  05-wrong_return_type.perk  06-balls.expected  06-missing_semicolon.expected  06-missing_semicolon.perk  07-missing_if_else_braces.expected  07-missing_if_else_braces.perk  08-missing_closing_quotes.expected  08-missing_closing_quotes.perk  09-private_access_from_outside.expected  09-private_access_from_outside.perk  10-double_declaration_in_model.expected  10-double_declaration_in_model.perk  12-model_access_without_self.perk  (+34 more)
(+133 files in other folders)
